[gd_scene load_steps=21 format=3 uid="uid://cb7xhsewpniel"]

[ext_resource type="Theme" uid="uid://eg00aabwon5u" path="res://assets/themes/heme_global.tres" id="1_f33ey"]
[ext_resource type="Texture2D" uid="uid://eqslbddkxqua" path="res://assets/fds.png" id="2_do37k"]
[ext_resource type="Script" uid="uid://cm65250hk2bro" path="res://scripts/finalcombat.gd" id="2_l4fe6"]
[ext_resource type="Texture2D" uid="uid://bd7ur2q064q7y" path="res://assets/jefe f.png" id="4_1iese"]
[ext_resource type="Texture2D" uid="uid://byl0u3qjhnb4p" path="res://assets/Fondo de Fondo de ChatGPT Image 24 may 2025, 01_42_21 p.m. eliminado eliminado.png" id="4_l4fe6"]
[ext_resource type="Texture2D" uid="uid://div4d6cqg0ln" path="res://assets/portada2.png" id="6_vei8y"]
[ext_resource type="Texture2D" uid="uid://cvd4avrai3qrf" path="res://assets/portada.png" id="7_2nx3w"]
[ext_resource type="Texture2D" uid="uid://uioxl6ybr2td" path="res://assets/boton.png" id="8_accqc"]
[ext_resource type="Texture2D" uid="uid://deltycl0djru6" path="res://assets/b1.png" id="9_341cn"]
[ext_resource type="Texture2D" uid="uid://cplklhjp3lhst" path="res://assets/Fondo de f6f343a8-f379-4c16-bf8f-979221e71431 eliminado.png" id="10_qd1p7"]
[ext_resource type="Texture2D" uid="uid://5bueb1miaw2h" path="res://assets/Fondo de 1d81a819-1412-41e0-8b5f-70eb3c01c53d eliminado.png" id="11_mugko"]
[ext_resource type="Texture2D" uid="uid://pa5d0v84q0f5" path="res://assets/Fondo de Captura de pantalla 2025-05-26 a la(s) 9.32.22 p.m. eliminado.png" id="12_2lnab"]
[ext_resource type="Texture2D" uid="uid://w5e45pwmwd45" path="res://assets/Fondo de Captura de pantalla 2025-05-26 a la(s) 9.32.41 p.m. eliminado.png" id="13_v2cj5"]
[ext_resource type="Texture2D" uid="uid://cncj6bai678ko" path="res://assets/Fondo de Captura de pantalla 2025-06-04 a la(s) 2.22.50 p.m. eliminado.png" id="13_vei8y"]
[ext_resource type="Texture2D" uid="uid://dup3d1csac1p7" path="res://assets/Fondo de Captura de pantalla 2025-05-26 a la(s) 9.33.09 p.m. eliminado.png" id="14_murqx"]
[ext_resource type="Texture2D" uid="uid://b4gditlnu3jlm" path="res://assets/Fondo de Captura de pantalla 2025-06-04 a la(s) 2.22.44 p.m. eliminado.png" id="15_2nx3w"]
[ext_resource type="Texture2D" uid="uid://cmeaejkva4clb" path="res://assets/Fondo de Captura de pantalla 2025-06-04 a la(s) 2.22.33 p.m. eliminado.png" id="15_tuwbn"]
[ext_resource type="Texture2D" uid="uid://bhfdyr65v3nbd" path="res://assets/Fondo de Captura de pantalla 2025-05-26 a la(s) 9.32.54 p.m. eliminado.png" id="16_5erri"]
[ext_resource type="Texture2D" uid="uid://c8aekvrunmtgf" path="res://assets/Fondo de Captura de pantalla 2025-05-26 a la(s) 9.32.47 p.m. eliminado.png" id="16_accqc"]
[ext_resource type="Texture2D" uid="uid://t0uxtsxvj5vm" path="res://assets/Fondo de Captura de pantalla 2025-05-26 a la(s) 9.33.00 p.m. eliminado.png" id="17_1pava"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_f33ey")
script = ExtResource("2_l4fe6")

[node name="FondoCombate" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -22.0
offset_top = -15.0
offset_right = 1274.0
offset_bottom = 745.0
texture = ExtResource("2_do37k")
expand_mode = 1

[node name="UI" type="CanvasLayer" parent="."]

[node name="InfoJugador" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 20.0
offset_top = 18.0
offset_right = 314.0
offset_bottom = 191.0
theme = ExtResource("1_f33ey")

[node name="AvatarJugador" type="TextureRect" parent="UI/InfoJugador"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
offset_left = -7.0
offset_top = -10.0
offset_right = 308.0
offset_bottom = 206.0
texture = ExtResource("4_l4fe6")
expand_mode = 1

[node name="Overlay" type="Control" parent="UI/InfoJugador"]
anchors_preset = 0
offset_left = 14.0
offset_top = 17.0
offset_right = 288.0
offset_bottom = 169.0

[node name="VidaIcono" type="TextureRect" parent="UI/InfoJugador/Overlay"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.179
anchor_bottom = 0.159
offset_left = 93.0
offset_top = 42.0
offset_right = 115.083
offset_bottom = 57.535

[node name="saludj" type="Label" parent="UI/InfoJugador/Overlay"]
layout_mode = 0
offset_left = 117.0
offset_top = 23.0
offset_right = 272.0
offset_bottom = 106.0
text = "\"salud\""

[node name="fichas" type="Label" parent="UI/InfoJugador/Overlay"]
layout_mode = 0
offset_left = 116.0
offset_top = 48.0
offset_right = 271.0
offset_bottom = 131.0
text = "\"fichas\""

[node name="VidaLabel" type="Label" parent="UI/InfoJugador/Overlay"]
layout_mode = 2
offset_left = 223.0
offset_top = 22.0
offset_right = 509.0
offset_bottom = 45.0
text = "10"

[node name="FichasIcono" type="TextureRect" parent="UI/InfoJugador/Overlay"]
layout_mode = 0
offset_left = 104.0
offset_top = 79.0
offset_right = 144.0
offset_bottom = 119.0

[node name="FichasLabel" type="Label" parent="UI/InfoJugador/Overlay"]
layout_mode = 2
offset_left = 234.0
offset_top = 50.0
offset_right = 549.0
offset_bottom = 73.0
text = "0"

[node name="InfoEnemigo" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 898.0
offset_top = 24.0
offset_right = 1287.0
offset_bottom = 191.0
theme = ExtResource("1_f33ey")

[node name="AvatarEnemigo" type="TextureRect" parent="UI/InfoEnemigo"]
layout_mode = 0
offset_left = 10.0
offset_top = -11.0
offset_right = 323.0
offset_bottom = 213.0
texture = ExtResource("4_1iese")
expand_mode = 1
flip_h = true

[node name="Overlay" type="Control" parent="UI/InfoEnemigo"]
anchors_preset = 0
offset_left = 39.0
offset_top = 14.0
offset_right = 313.0
offset_bottom = 164.0

[node name="VidaIcono" type="TextureRect" parent="UI/InfoEnemigo/Overlay"]
layout_mode = 0
offset_left = 61.0
offset_top = 84.0
offset_right = 101.0
offset_bottom = 121.0

[node name="VidaLabel" type="Label" parent="UI/InfoEnemigo/Overlay"]
layout_mode = 0
offset_left = 117.0
offset_top = 24.0
offset_right = 475.0
offset_bottom = 58.0
text = "30\""

[node name="FichasLabel" type="Label" parent="UI/InfoEnemigo/Overlay"]
layout_mode = 0
offset_top = 51.0
offset_right = 169.0
offset_bottom = 86.0
text = "fichas 100
"

[node name="FichasIcono" type="TextureRect" parent="UI/InfoEnemigo/Overlay"]
layout_mode = 0
offset_left = 100.0
offset_top = 95.0
offset_right = 140.0
offset_bottom = 135.0

[node name="salud" type="Label" parent="UI/InfoEnemigo/Overlay"]
layout_mode = 0
offset_left = -13.0
offset_top = 22.0
offset_right = 347.0
offset_bottom = 235.0
text = "\"salud\""

[node name="Label" type="Label" parent="UI/InfoEnemigo/Overlay"]
layout_mode = 0
offset_left = 1.0
offset_top = 171.0
offset_right = 302.0
offset_bottom = 215.0
text = "Don rico"

[node name="ZonaEnemigo" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 799.0
offset_top = 302.0
offset_right = 1209.3
offset_bottom = 682.0

[node name="MazoTapa" type="TextureRect" parent="UI/ZonaEnemigo"]
visible = false
layout_mode = 2
offset_left = 219.0
offset_top = 179.0
offset_right = 369.0
offset_bottom = 383.0
texture = ExtResource("6_vei8y")
expand_mode = 1

[node name="CartasEnemigo" type="HBoxContainer" parent="UI/ZonaEnemigo"]
layout_mode = 2
offset_left = -46.0
offset_top = 47.0
offset_right = 403.0
offset_bottom = 187.0
alignment = 2

[node name="ZonaJugador" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 55.0
offset_top = 297.0
offset_right = 465.0
offset_bottom = 677.0

[node name="CartasJugador" type="HBoxContainer" parent="UI/ZonaJugador"]
layout_mode = 2
offset_left = 8.0
offset_top = 47.0
offset_right = 494.0
offset_bottom = 187.0

[node name="MazoTapa" type="TextureRect" parent="UI/ZonaJugador"]
visible = false
layout_mode = 2
offset_left = 30.0
offset_top = 188.0
offset_right = 172.0
offset_bottom = 381.0
texture = ExtResource("7_2nx3w")
expand_mode = 1

[node name="BotonesJuego" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 495.0
offset_top = 311.0
offset_right = 838.0
offset_bottom = 668.0
theme = ExtResource("1_f33ey")

[node name="BotonPedir" type="Button" parent="UI/BotonesJuego"]
layout_mode = 2
offset_left = 58.0
offset_top = 27.0
offset_right = 1602.0
offset_bottom = 1059.0
scale = Vector2(0.12, 0.12)
icon = ExtResource("8_accqc")

[node name="BotonPlantarse" type="Button" parent="UI/BotonesJuego"]
layout_mode = 2
offset_left = 55.0
offset_top = 154.0
offset_right = 1599.0
offset_bottom = 1186.0
scale = Vector2(0.13, 0.13)
icon = ExtResource("9_341cn")

[node name="MensajeCentral" type="Label" parent="UI"]
offset_left = 451.0
offset_top = 219.0
offset_right = 859.0
offset_bottom = 331.0
theme = ExtResource("1_f33ey")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BotonEscudo" type="Button" parent="UI"]
offset_left = 189.0
offset_top = 176.0
offset_right = 373.0
offset_bottom = 305.0
icon = ExtResource("10_qd1p7")
expand_icon = true

[node name="BotonDanoX2" type="Button" parent="UI"]
offset_left = 23.0
offset_top = 178.0
offset_right = 194.0
offset_bottom = 304.0
icon = ExtResource("11_mugko")
expand_icon = true

[node name="fichasjgd" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 329.0
offset_top = 123.0
offset_right = 453.0
offset_bottom = 232.0
texture = ExtResource("12_2lnab")

[node name="fichasjgd2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 270.0
offset_top = 28.0
offset_right = 407.0
offset_bottom = 167.0
texture = ExtResource("13_v2cj5")

[node name="fichasjgd3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 659.0
offset_top = 14.0
offset_right = 797.0
offset_bottom = 159.0
texture = ExtResource("13_vei8y")

[node name="fichasjgd4" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 432.0
offset_top = 25.0
offset_right = 556.0
offset_bottom = 134.0
texture = ExtResource("15_tuwbn")

[node name="fichasenemi" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 817.0
offset_top = 11.0
offset_right = 954.0
offset_bottom = 143.0
texture = ExtResource("15_2nx3w")

[node name="fichasenemi2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 818.0
offset_top = 96.0
offset_right = 950.0
offset_bottom = 250.0
texture = ExtResource("16_accqc")

[node name="fichasenemi6" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 712.0
offset_top = 10.0
offset_right = 848.0
offset_bottom = 164.0
texture = ExtResource("16_accqc")

[node name="fichasenemi7" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 738.0
offset_top = 83.0
offset_right = 870.0
offset_bottom = 238.0
texture = ExtResource("16_accqc")

[node name="fichasenemi5" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 358.0
offset_top = 162.0
offset_right = 490.0
offset_bottom = 270.0
texture = ExtResource("14_murqx")

[node name="fichasenemi4" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 393.0
offset_top = 99.0
offset_right = 513.0
offset_bottom = 205.0
texture = ExtResource("16_5erri")

[node name="fichasenemi3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 345.0
offset_top = 4.0
offset_right = 479.0
offset_bottom = 138.0
texture = ExtResource("17_1pava")

[node name="saludj2" type="Label" parent="."]
layout_mode = 0
offset_right = 69.0
offset_bottom = 35.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 531.0
offset_top = 651.0
offset_right = 1267.0
offset_bottom = 700.0
text = "el enemigo toma desiciones insiertas
 !cuidado!"
